tests/errors/syntax_err09.v
module a(input wire x = 1'b0);
endmodule

